src/objects/Apttus_Config2__Milestone2__c.object
<CustomObject>
    <description>Represents milestones associated with other business objects</description>
    <fields>
        <fullName>Apttus_Config2__ActualDate__c</fullName>
        <description>The milestone completed date</description>
        <inlineHelpText>The milestone completed date</inlineHelpText>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing plan</description>
        <inlineHelpText>ID of the associated billing plan</inlineHelpText>
        <label>Billing Plan</label>
        <referenceTo>Apttus_Config2__BillingPlan__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Category__c</fullName>
        <description>The milestone category.</description>
        <inlineHelpText>The milestone category.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Comments__c</fullName>
        <description>The milestone comments</description>
        <inlineHelpText>The milestone comments</inlineHelpText>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CompletedByUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the user who completed the milestone</description>
        <inlineHelpText>ID of the user who completed the milestone</inlineHelpText>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CompletedOnDate__c</fullName>
        <description>The date the milestone was completed</description>
        <inlineHelpText>The date the milestone was completed</inlineHelpText>
        <label>Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContextEntityId__c</fullName>
        <description>The ID of the context entity</description>
        <externalId>true</externalId>
        <inlineHelpText>The ID of the context entity</inlineHelpText>
        <label>Context Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContextEntityType__c</fullName>
        <description>The context entity type</description>
        <inlineHelpText>The context entity type</inlineHelpText>
        <label>Context Entity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DeductionAmount__c</fullName>
        <description>The amount that may be deducted from payments for partially completed milestones</description>
        <inlineHelpText>The amount that may be deducted from payments for partially completed milestones</inlineHelpText>
        <label>Deduction Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The milestone description</description>
        <inlineHelpText>The milestone description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpectedDate__c</fullName>
        <description>The milestone expected date</description>
        <inlineHelpText>The milestone expected date</inlineHelpText>
        <label>Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxBenefitAmount__c</fullName>
        <description>The maximum benefit amount</description>
        <inlineHelpText>The maximum benefit amount</inlineHelpText>
        <label>Max Benefit Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated parent milestone</description>
        <inlineHelpText>ID of the associated parent milestone</inlineHelpText>
        <label>Parent</label>
        <referenceTo>Apttus_Config2__Milestone2__c</referenceTo>
        <relationshipLabel>Child Milestones</relationshipLabel>
        <relationshipName>ChildMilestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PercentComplete__c</fullName>
        <description>Indicates the percent completion for partially completed milestones</description>
        <inlineHelpText>Indicates the percent completion for partially completed milestones</inlineHelpText>
        <label>% Complete</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Status__c</fullName>
        <description>The milestone status</description>
        <inlineHelpText>The milestone status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expected</fullName>
                    <default>true</default>
                    <label>Expected</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TemplateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated milestone template</description>
        <inlineHelpText>ID of the associated milestone template</inlineHelpText>
        <label>Template</label>
        <referenceTo>Apttus_Config2__MilestoneTemplate__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>The milestone type</description>
        <inlineHelpText>The milestone type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Milestone</fullName>
                    <default>true</default>
                    <label>Milestone</label>
                </value>
                <value>
                    <fullName>Deliverable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>